[gd_scene load_steps=5 format=2]

[ext_resource path="res://Juego/Naves/NaveBase.gd" type="Script" id=1]
[ext_resource path="res://Juego/Proyectiles/Canion.tscn" type="PackedScene" id=3]
[ext_resource path="res://Juego/Proyectiles/Proyectil_player.tscn" type="PackedScene" id=4]
[ext_resource path="res://Juego/Naves/Player/Da√±o_player.ogg" type="AudioStream" id=5]

[node name="NaveBase" type="RigidBody2D"]
collision_layer = 0
collision_mask = 0
gravity_scale = 0.0
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="Canion" parent="." instance=ExtResource( 3 )]
proyectil = ExtResource( 4 )

[node name="ControladorDeEstados" type="Tween" parent="."]

[node name="AudioDanio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = 8.0

[connection signal="body_entered" from="." to="." method="_on_Player_body_entered"]
